Added relationship loading with depth